@@ -115,7 +115,7 @@ public class TabbedView extends JFrame {
                     //it's possible to change to another file
                     //that is using another view.
                     updateMenuBar();
-                    updateTitle();
+                    update();
                 }
            });//}}}
         
@@ -153,7 +153,7 @@ public class TabbedView extends JFrame {
             newDocView.setDocument(this,doc);
             tabbedPane.add(doc.getName(), newDocView);
             tabbedPane.setSelectedComponent(newDocView);
-            updateTitle();
+            update();
             updateMenuBar();
         }
     }//}}}
@@ -171,7 +171,7 @@ public class TabbedView extends JFrame {
                     tabbedPane.setSelectedIndex(i);
                 }
             }
-            updateTitle();
+            update();
             updateMenuBar();
         }
     }//}}}
@@ -190,7 +190,7 @@ public class TabbedView extends JFrame {
                     //if the tab removed is not the rightmost tab
                     //stateChanged is not called for some
                     //reason.
-                    updateTitle();
+                    update();
                 }
             }
         }
@@ -205,9 +205,9 @@ public class TabbedView extends JFrame {
     }//}}}
     
     /**
-     * Updates the title of the view.
+     * Updates the view.
      */
-    public void updateTitle() {//{{{
+    public void update() {//{{{
         DocumentView currentDocView = getDocumentView();
         if (currentDocView != null) {
             XMLDocument document = currentDocView.getXMLDocument();
@@ -216,6 +216,10 @@ public class TabbedView extends JFrame {
                 name = document.getName();
             }
             setTitle(jsXe.getAppTitle() + " - " + name);
+            XMLDocument[] docs = jsXe.getXMLDocuments();
+            for (int i=0; i<docs.length;i++) {
+                tabbedPane.setTitleAt(i, docs[i].getName());
+            }
         } else {
             setTitle(jsXe.getAppTitle());
         }
